--- a/cs598.css
+++ b/cs598.css
@@ -1,182 +1,136 @@
 html {overflow-y: scroll;}
-.map-div {
-    width: 600px;
-    height: 1000px;
-/*    float: left;*/
+.post-div {
+	width: 600px;
 }
-.page-header{
-    margin-top: 80px;
-}
+
 .post-div .title {
-    width: 600px;
+  width: 600px;
 }
 
 .search-div .keyword {
-    width: 140px;
+  width: 140px;
 }
 
 .p_inline{
-    margin-left: 75px;
-    margin-top: -30px;
+	margin-left: 75px;
+	margin-top: -30px;
 }
 
 .s_inline{
-    margin-left: 75px;
-    margin-top: -30px;
-    width:831px;
+	margin-left: 75px;
+	margin-top: -30px;
+	width:831px;
 }
 .form-group{
-    float:left;
-    display:inline;
+	float:left;
+	display:inline;
 }
 
 .text_area {
-    height: 200px;
-    width: 580px;
+	height: 200px;
+	width: 580px;
 }
 
 .q_text_area {
-    height:200px;
-    width: 600px;
+	height:200px;
+	width: 600px;
 }
 
 .edit_area {
-    height: 200px;
-    width: 556px;
+	height: 200px;
+	width: 556px;
 }
 
 .float_left {
-    float: left;
+  float: left;
 }
 
 .s_results{
-    float:left;
+  float:left;
 }
 
 .q_question {
-    width: 580px;
+  width: 580px;
 }
 
 .q_titles {
-    width: 300px;
+  width: 300px;
 }
 .s_QandA{
-    float:left;
+  float:left;
 }
 #result_detail_div {
-    margin-left: 26px;
-    margin-top: -110px;
+  margin-left: 26px;
+  margin-top: -110px;
 
 }
 
 .solutions {
-    float: left;
-    width: 100%;
+  float: left;
+  width: 100%;
 }
 
 .left-right .left {
-    float: left;
-    position: relative;
+  float: left;
+  position: relative;
 }
 
 .left-right .right {
-    float: right;
-    text-align: right;
-    position: relative;
+  float: right;
+  text-align: right;
+  position: relative;
 }
 #register{
-    margin-left: 0px;
-    margin-top: 0px;
-    color: blue;
+  margin-left: 0px;
+  margin-top: 0px;
+  color: blue;
 }
 #search_button{
-    margin-top: -10px;
+  margin-top: -10px;
 }
 .thumbnail{
-    width: 570px;
+  width: 570px;
 }
 .to_right{
-    text-align: right;
+  text-align: right;
 }
 #search_category{
-    width: 17%;
+  width: 17%;
 }
 #post_category{
-    width: 152%;
+  width: 152%;
 }
 
 #search_button{
-    margin-top: 1px;
-    margin-left: 10px;
+  margin-top: 1px;
+  margin-left: 10px;
 }
 #username{
-    width: 33%;
+  width: 33%;
 }
 #password{
-    width: 33%;
+  width: 33%;
 }
 #result_list_div{
-    margin-top: 16px;
+  margin-top: 16px;
 }
 .slide_container{
-    height: 400px;
+  height: 400px;
 }
 #myCarousel{
-    background-color: grey;
+  background-color: grey;
 }
 .carousel-caption{
-    margin-bottom: 60px;
+  margin-bottom: 60px;
 }
 #post_solution_button{
-    margin-top: -3px;
+  margin-top: -3px;
 }
 #solution_text{
-    height: 200px;
+  height: 200px;
 }
 .editor{
-    height: 200px;
-    margin-top: 20px;
-    overflow: scroll;
-}/*
-input[type=radio] {
-    display:none;
+  height: 200px;
+  margin-top: 20px;
+  overflow: scroll;
 }
-
-input[type=radio] + label {
-    display:inline-block;
-    margin:-2px;
-    padding: 4px 12px;
-    margin-bottom: 0;
-    font-size: 14px;
-    line-height: 20px;
-    color: #333;
-    text-align: center;
-    text-shadow: 0 1px 1px rgba(255,255,255,0.75);
-    vertical-align: middle;
-    cursor: pointer;
-    background-color: #f5f5f5;
-    background-image: -moz-linear-gradient(top,#fff,#e6e6e6);
-    background-image: -webkit-gradient(linear,0 0,0 100%,from(#fff),to(#e6e6e6));
-    background-image: -webkit-linear-gradient(top,#fff,#e6e6e6);
-    background-image: -o-linear-gradient(top,#fff,#e6e6e6);
-    background-image: linear-gradient(to bottom,#fff,#e6e6e6);
-    background-repeat: repeat-x;
-    border: 1px solid #ccc;
-    border-color: #e6e6e6 #e6e6e6 #bfbfbf;
-    border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.25);
-    border-bottom-color: #b3b3b3;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff',endColorstr='#ffe6e6e6',GradientType=0);
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-    -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
-    -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
-    box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
-}
-input[type=radio]:checked + label{
-    background-image: none;
-    outline: 0;
-    -webkit-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
-    -moz-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
-    box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
-    background-color:#e0e0e0;
-}
-*/
