--- a/select2-3.5.2/select2.css
+++ b/select2-3.5.2/select2.css
@@ -53,7 +53,11 @@ box-sizing: border-box;         /* css3 */
       padding: 0 0 0 8px;
       color: #444;
       text-decoration: none;
-                                                                                              }
+      width: 200px;
+      margin-left: 48px;
+
+}
+
 
                                                                                               .select2-container.select2-drop-above .select2-choice
                                                                                               {
@@ -405,6 +409,8 @@ box-sizing: border-box;         /* css3 */
 
                                                                                                                                                                   .select2-container-multi .select2-choices .select2-search-field input {
                                                                                                                                                                       color: #666;
+                                                                                                                                                                      height: 28px;
+                                                                                                                                                                      margin: auto;
                                                                                                                                                                       background: transparent !important;
                                                                                                                                                                       font-family: sans-serif;
                                                                                                                                                                       font-size: 100%;
