--- a/css/cs598-1.css
+++ b/css/cs598-1.css
@@ -23,7 +23,7 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0 0 35px;
+    margin: 0 0 20px;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
@@ -188,11 +188,12 @@ a:focus {
     }
 
     .intro .intro-body .brand-heading {
-        font-size: 100px;
+        font-size: 50px;
     }
 
     .intro .intro-body .intro-text {
-        font-size: 25px;
+        font-size: 21px;
+        color: antiquewhite;
     }
 }
 
@@ -294,7 +295,7 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 250px;
+        padding-top: 150px;
     }
 
     .download-section {
