--- a/css/cs598-1.css
+++ b/css/cs598-1.css
@@ -7,7 +7,7 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'Arvo',Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #000;
     background-color: #fff;
 }
@@ -29,6 +29,10 @@ h6 {
     letter-spacing: 1px;
 }
 
+
+h4 {
+    line-height: 26px;
+}
 p {
     margin: 0 0 25px;
     font-size: 18px;
@@ -63,6 +67,7 @@ a:focus {
 }
 .left_result{
     float:left;
+    text-align: end;
 }
 .right_result{
     float: right;
@@ -201,11 +206,11 @@ a:focus {
 }
 
 .btn-circle {
-    width: 70px;
-    height: 70px;
+    width: 80px;
+    height: 80px;
     margin-top: 15px;
     padding: 7px 16px;
-    border: 2px solid #fff;
+    border: 0px solid #fff;
     border-radius: 35px;
     font-size: 40px;
     color: #fff;
@@ -219,7 +224,7 @@ a:focus {
 .btn-circle:focus {
     outline: 0;
     color: #fff;
-    background: rgba(255,255,255,.1);
+    background: rgba(255,255,255,0);
 }
 
 .btn-circle i.animated {
@@ -312,7 +317,7 @@ a:focus {
 }
 
 .btn {
-    text-transform: uppercase;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2);
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 400;
     -webkit-transition: all .3s ease-in-out;
@@ -386,4 +391,12 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
+}
+
+.page-header {
+    margin: 0 0 20px;
+}
+
+#search-result {
+    padding-top: 15px;
 }
