--- a/css/cs598-1.css
+++ b/css/cs598-1.css
@@ -59,6 +59,10 @@ a:focus {
     text-decoration: none;
     color: #11505d;
 }
+#slider-range-min{
+    width: 266px;
+    margin: auto;
+}
 #result-area{
     overflow: scroll;
     height: 600px;
