--- a/css/cs598-1.css
+++ b/css/cs598-1.css
@@ -60,8 +60,8 @@ a:focus {
     color: #11505d;
 }
 #slider-range-min{
-    width: 266px;
-    margin: auto;
+    width: 290px;
+    margin: 10px 0px 5px 0px;
 }
 #result-area{
     overflow: scroll;
@@ -400,6 +400,7 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
+    overflow: scroll;
 }
 
 .page-header {
@@ -421,4 +422,15 @@ body {
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 20px;
+}
+
+.main-search {
+    margin-left: 385px;
+    width: 400px;
+}
+
+.search-result-slider {
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 10px;
 }
