--- a/css/cs598-1.css
+++ b/css/cs598-1.css
@@ -65,8 +65,8 @@ a:focus {
 }
 #result-area{
     overflow: scroll;
+    width: 98.5%;
     height: 600px;
-    width: 100%;
 }
 .m_l{
     margin-left: 6px;
@@ -86,15 +86,14 @@ a:focus {
     margin: auto;
     height: 28px;
 }
-.img-selected{
-    content:url("../img/star_blue.svg");
-    height: 30px;
-    width: 30px;
+.star-selected{
+    color: #D9D789;
+    padding-right: 2px;
 }
-.img-not-selected{
-    content:url("../img/star_white.svg");
-    height: 30px;
-    width: 30px;
+
+.star-not-selected{
+    color: #4A4A4A;
+    padding-right: 2px;
 
 }
 .light {
@@ -400,7 +399,7 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
-    overflow: scroll;
+    overflow: auto;
 }
 
 .page-header {
@@ -410,6 +409,11 @@ body {
 
 .search-result-left {
     padding: 0px 0px 15px 0px;
+}
+
+.search-result-right {
+    padding: 0px 0px 0px 20px;
+
 }
 
 .borderless_container {
