--- a/css/cs598-1.css
+++ b/css/cs598-1.css
@@ -77,7 +77,7 @@ a:focus {
 }
 .circle {
     display: block;
-    position: absolute;
+    position: relative;
     width: 15px;
     height: 15px;
     -webkit-border-radius: 25px;
